--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>BOSSES Encoder/Decoder</title>
 </head>
 <body>
-<h1> TEST</h1>
+<h1> Official BOSSES Encoder/Decoder</h1>
+<h3>Use this website to encode things that you are going to post on the BOSSES, so that the evil administration cannot track you using Securly.</h3>
+<br>
+<h3>You can also use the decoder to decode messages posted by other BOSSES members.</h3>
+ 
 </body>
 </html>
