--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>BOSSES Encoder/Decoder</title>
-	<script type="text/javascript" src="encode-min.js">
-	</script>
+	<script type="text/javascript" src="encode-min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 </head>
 <body>
 
@@ -26,6 +26,5 @@
  	<br><br>
  	<input style="" type="submit" name="Decode" value="Decode">
  </form>
-	</div>
 </body>
 </html>
