make encoded text more visible

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <h3>Use this website to encode things that you are going to post on the BOSSES, so that the evil administration cannot track you using Securly.</h3>
 <h3>You can also use the decoder to decode messages posted by other BOSSES members.</h3>
 </div>
+<h2 id = "encodedText" style="text-align: center"><br></h2>
+<h2 id = "decodedText" style="text-align: center"></h2>
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
@@ -32,8 +34,6 @@
 		</div>
 	</div>
 </div>
-<h2 id = "encodedText" style="text-align: center"></h2>
-<h2 id = "decodedText" style="text-align: center"></h2>
 </body>
 </html>
 <!---
