--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>BOSSES Encoder/Decoder</title>
-	<script type="text/javascript" src="encode-min.js"></script>
+	<script type="text/javascript" src="encoder.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -15,6 +15,10 @@
 <h2 id = "encodedText" style="text-align: center"><br></h2>
 <h2 id = "decodedText" style="text-align: center"></h2>
 <div class="container">
+<form action="">
+	<input type="radio" name="encryptionMethod" value="reg" checked="checked" id="reg"> <strong> Kinda Sus Encryption</strong><br>
+  	<input type="radio" name="encryptionMethod" value="sus" id="sus"> <strong> ULTRA Sus Encryption</strong> <br>
+</form>
 	<div class="row">
 		<div class="col-md-6">
 		 <form onsubmit="return encode()">
