added more encryption and stopped text from going off screen

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 <h3>Use this website to encode things that you are going to post on the BOSSES, so that the evil administration cannot track you using Securly.</h3>
 <h3>You can also use the decoder to decode messages posted by other BOSSES members.</h3>
 </div>
-<h2 id = "encodedText" style="text-align: center"><br></h2>
-<h2 id = "decodedText" style="text-align: center"></h2>
 <div class="container">
+<h2 id = "encodedText" style="text-align: center; word-wrap: break-word;"><br></h2>
+<h2 id = "decodedText" style="text-align: center; word-wrap: break-word;"></h2>
 <form action="">
 	<input type="radio" name="encryptionMethod" value="reg" checked="checked" id="reg"> <strong> Kinda Sus Encryption</strong><br>
-  	<input type="radio" name="encryptionMethod" value="sus" id="sus"> <strong> ULTRA Sus Encryption</strong> <br>
+  	<input type="radio" name="encryptionMethod" value="sus" id="sus"> <strong> Ultra Sus Encryption</strong> <br>
+  	<input type="radio" name="encryptionMethod" value="moresus" id="moresus"> <strong> EXTREMELY Sus Encryption</strong> <br>
 </form>
 	<div class="row">
 		<div class="col-md-6">
